# dynamic-model-router

./: README.md  SEMANTIC_PROJECT_NOTES.md  pyproject.toml
dynamic_model_router/: __init__.py  api.py  cli.py  providers.py  router.py
dynamic_model_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_router.py
